# mime-parser

./: MANIFEST.in  README.md  black.sh  flake8.sh  isort.cfg  isort.sh  main.py  mypy.sh  project.dic  pytest.ini  requirements.full.txt  requirements.test.txt  requirements.txt  setup.cfg  setup.py  uninstall.sh
mime_parser/: __init__.py  __main__.py  arguments.py  entrypoint.py  favorite.py  global_register.py  variables.py
mime_parser/apps/: decode_main.py  encode_main.py  iana_main.py  list_main.py
mime_parser/codec/: __init__.py  global_register.py  json.py  mime_codec.py  mime_codec_register.py
mime_parser/codec/application/: __init__.py  gzip.py  json.py
mime_parser/codec/codecs/: json.py
mime_parser/driver/: json.py
mime_parser/iana/: __init__.py  registered_mime_types.py
mime_parser/logging/: __init__.py  loggers.py  logging.py
mime_parser/mime/: mime_codec.py  mime_codec_register.py  mime_type.py
mime_parser/package/: filter.py  package_utils.py
mime_parser/plugin/: find_plugin_codecs.py
mime_parser/regex/: access_filter.py
mime_parser/system/: environment.py  environment_context.py
mime_parser/types/string/: to_boolean.py
tester/: test_global_register.py  test_iana.py  test_mime_type.py
tester/codec/: test_mime_codec_register.py
tester/iana/: test_registered_mime_types.py
tester/mime/: test_mime_codec.py  test_mime_codec_register.py  test_mime_type.py
tester/package/: test_filter.py
tester/pattern/: test_singleton.py
tester/plugins/: test_find_plugin_codecs.py
tester/plugins/test_plugin/: __init__.py
tester/regex/: test_access_filter.py
tester/system/: test_environment.py  test_environment_context.py
tester/types/string/: test_to_boolean.py
